kubernetes/overlays/homelab/romm/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: romm
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
