kubernetes/overlays/homelab/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: romm
  namespace: romm
  annotations:
    tailscale.com/tags: "tag:k8s-romm"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: romm
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: /streaming
            pathType: Prefix
            backend:
              service:
                name: webstation
                port:
                  number: 3000
  tls:
    - hosts:
        - romm
